--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "node ./node_modules/.bin/svgo -f ./source -o ./out"
+        "vscode:prepublish": "node ./node_modules/.bin/svgo -f ./source -o ./icons"
     },
     "devDependencies": {
         "svgo": "^0.7.1"
