Replace duplicator with generator

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "node ./duplicator.js && node ./node_modules/.bin/svgo -f ./source/simple-icons -o ./icons/simple-icons && node ./node_modules/.bin/svgo -f ./source/minimalistic-icons -o ./icons/minimalistic-icons"
+        "vscode:prepublish": "bash ./generator.sh && node ./node_modules/.bin/svgo -f ./source/simple-icons -o ./icons/simple-icons && node ./node_modules/.bin/svgo -f ./source/minimalistic-icons -o ./icons/minimalistic-icons"
     },
     "devDependencies": {
         "svgo": "^0.7.2"
