--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
     "tasks": [
         {
             "isBuildCommand": true,
-            "taskName": "optimize",
+            "taskName": "build",
             "args": [
                 "run",
                 "vscode:prepublish"
