Update launch.json and tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,11 @@
                 "isDefault": true
             },
             "type": "shell",
-            "command": "npm run vscode:prepublish"
+            "command": "npm",
+            "args": [
+                "run",
+                "vscode:prepublish"
+            ]
         }
     ]
 }
