--- a/.svgo.yml
+++ b/.svgo.yml
@@ -7,6 +7,7 @@ plugins:
   - removeXMLNS                     : false
   - removeEditorsNSData             : false
   - cleanupAttrs                    : false
+  - inlineStyles                    : false
   - minifyStyles                    : false
   - convertStyleToAttrs             : false
   - cleanupIDs                      : false
