--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
         "icons"
     ],
     "icon": "images/logo.png",
+    "activationEvents": [
+        "*"
+    ],
+    "main": "./out/extension",
     "contributes": {
         "iconThemes": [
             {
@@ -39,13 +43,36 @@
                 "label": "Minimalistic icons",
                 "path": "./minimalistic-icons.json"
             }
+        ],
+        "configuration": [
+            {
+                "title": "Simple icons",
+                "properties": {
+                    "simpleIcons.hideArrows": {
+                        "type": "boolean",
+                        "default": true,
+                        "description": "Whether arrows are shown next to folders",
+                        "scope": "window"
+                    }
+                }
+            }
         ]
     },
     "scripts": {
-        "vscode:prepublish": "bash ./generator.sh"
+        "vscode:prepublish": "bash ./generator.sh",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
+        "@types/bluebird": "^3.5.19",
         "svgo": "^1.0.3",
-        "vsce": "^1.35.0"
+        "typescript": "^2.6.2",
+        "vsce": "^1.35.0",
+        "vscode": "^1.1.10"
+    },
+    "dependencies": {
+        "bluebird": "^3.5.1"
     }
 }
