--- a/package.json
+++ b/package.json
@@ -75,10 +75,11 @@
         "test": "npm run compile && node node_modules/vscode/bin/test"
     },
     "devDependencies": {
+        "@types/node": "^10.12.26",
         "svgo": "^1.1.1",
-        "typescript": "^3.3.1",
-        "vsce": "^1.55.0",
-        "vscode": "^1.1.28"
+        "typescript": "^3.3.3",
+        "vsce": "^1.57.1",
+        "vscode": "^1.1.29"
     },
     "dependencies": {}
 }
