--- a/package.json
+++ b/package.json
@@ -69,17 +69,21 @@
     },
     "scripts": {
         "vscode:prepublish": "bash generator.sh",
-        "compile": "tsc -p .",
-        "watch": "tsc -watch -p .",
-        "postinstall": "node node_modules/vscode/bin/install",
-        "test": "npm run compile && node node_modules/vscode/bin/test"
+        "compile": "webpack --mode production",
+        "watch": "webpack --mode none --watch",
+        "postinstall": "node node_modules/vscode/bin/install"
     },
     "devDependencies": {
-        "@types/node": "^10.12.26",
-        "svgo": "^1.1.1",
-        "typescript": "^3.3.3",
-        "vsce": "^1.57.1",
-        "vscode": "^1.1.29"
+        "@types/node": "10.x.x",
+        "@types/webpack": "^4.4.26",
+        "svgo": "^1.2.0",
+        "ts-loader": "^5.3.3",
+        "ts-node": "^8.0.3",
+        "typescript": "^3.4.1",
+        "vsce": "^1.59.0",
+        "vscode": "^1.1.33",
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.3.0"
     },
     "dependencies": {}
 }
