Set "extensionKind": "ui" to support remote development
Fixes #51. See that issue for details

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "icons"
     ],
     "icon": "images/logo.png",
+    "extensionKind": "ui",
     "activationEvents": [
         "*"
     ],
