--- a/package.json
+++ b/package.json
@@ -75,16 +75,16 @@
         "postinstall": "node node_modules/vscode/bin/install"
     },
     "devDependencies": {
-        "@types/node": "10.x.x",
-        "@types/webpack": "^4.4.26",
-        "svgo": "^1.2.0",
-        "ts-loader": "^5.3.3",
-        "ts-node": "^8.0.3",
-        "typescript": "^3.4.1",
-        "vsce": "^1.59.0",
+        "@types/node": "^10.x.x",
+        "@types/webpack": "^4.4.29",
+        "svgo": "^1.2.2",
+        "ts-loader": "^5.4.5",
+        "ts-node": "^8.1.0",
+        "typescript": "^3.4.5",
+        "vsce": "^1.61.0",
         "vscode": "^1.1.33",
-        "webpack": "^4.29.6",
-        "webpack-cli": "^3.3.0"
+        "webpack": "^4.30.0",
+        "webpack-cli": "^3.3.1"
     },
     "dependencies": {}
 }
