--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "url": "https://github.com/LaurentTreguier/vscode-simple-icons.git"
     },
     "engines": {
-        "vscode": "^1.33.1"
+        "vscode": "^1.36.0"
     },
     "categories": [
         "Themes",
@@ -71,20 +71,19 @@
     "scripts": {
         "vscode:prepublish": "bash generator.sh",
         "compile": "webpack --mode production",
-        "watch": "webpack --mode none --watch",
-        "postinstall": "node node_modules/vscode/bin/install"
+        "watch": "webpack --mode none --watch"
     },
     "devDependencies": {
         "@types/node": "^10.x.x",
-        "@types/webpack": "^4.4.31",
+        "@types/webpack": "^4.4.34",
+        "@types/vscode": "^1.36.0",
         "svgo": "^1.2.2",
-        "ts-loader": "^5.4.5",
-        "ts-node": "^8.1.0",
-        "typescript": "^3.4.5",
-        "vsce": "^1.61.0",
-        "vscode": "^1.1.34",
-        "webpack": "^4.31.0",
-        "webpack-cli": "^3.3.2"
+        "ts-loader": "^6.0.4",
+        "ts-node": "^8.3.0",
+        "typescript": "^3.5.2",
+        "vsce": "^1.64.0",
+        "webpack": "^4.35.2",
+        "webpack-cli": "^3.3.5"
     },
     "dependencies": {}
 }
