--- a/package.json
+++ b/package.json
@@ -74,16 +74,16 @@
         "watch": "webpack --mode none --watch"
     },
     "devDependencies": {
-        "@types/node": "^10.x.x",
-        "@types/webpack": "^4.4.34",
+        "@types/node": "^10.14.13",
         "@types/vscode": "^1.36.0",
-        "svgo": "^1.2.2",
+        "@types/webpack": "^4.32.0",
+        "svgo": "^1.3.0",
         "ts-loader": "^6.0.4",
         "ts-node": "^8.3.0",
-        "typescript": "^3.5.2",
-        "vsce": "^1.64.0",
-        "webpack": "^4.35.2",
-        "webpack-cli": "^3.3.5"
+        "typescript": "^3.5.3",
+        "vsce": "^1.66.0",
+        "webpack": "^4.37.0",
+        "webpack-cli": "^3.3.6"
     },
     "dependencies": {}
 }
