--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-simple-icons",
     "displayName": "Simple icons",
     "description": "An icon theme that tries to be simple",
-    "version": "1.11.11",
+    "version": "1.12.0",
     "publisher": "LaurentTreguier",
     "license": "MIT",
     "bugs": {
@@ -27,7 +27,9 @@
         "icons"
     ],
     "icon": "images/logo.png",
-    "extensionKind": ["ui"],
+    "extensionKind": [
+        "ui"
+    ],
     "activationEvents": [
         "*"
     ],
