--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "@types/node": "^12.12.50",
         "@types/vscode": "^1.47.0",
         "@types/webpack": "^4.41.21",
+        "ovsx": "0.1.0-next.dacd2fd",
         "svgo": "^1.3.2",
         "ts-loader": "^8.0.1",
         "ts-node": "^8.10.2",
