--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "url": "https://github.com/LaurentTreguier/vscode-simple-icons.git"
     },
     "engines": {
-        "vscode": "^1.55.0"
+        "vscode": "^1.58.1"
     },
     "categories": [
         "Themes",
@@ -86,16 +86,16 @@
         "watch": "webpack --mode none --watch"
     },
     "devDependencies": {
-        "@types/node": "^12.20.7",
-        "@types/vscode": "^1.55.0",
+        "@types/node": "^14.17.5",
+        "@types/vscode": "^1.58.1",
         "@types/webpack": "^5.28.0",
-        "ovsx": "0.1.0-next.a9154dc",
-        "svgo": "^2.3.0",
-        "ts-loader": "^8.1.0",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.2.3",
-        "vsce": "^1.87.1",
-        "webpack": "^5.28.0",
-        "webpack-cli": "^4.6.0"
+        "ovsx": "^0.2.0",
+        "svgo": "^2.3.1",
+        "ts-loader": "^9.2.3",
+        "ts-node": "^10.1.0",
+        "typescript": "^4.3.5",
+        "vsce": "^1.95.1",
+        "webpack": "^5.45.1",
+        "webpack-cli": "^4.7.2"
     }
 }
